# TSuperMachine

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
native/: CMakeLists.txt  NATIVE_README.md  README.md  package.json
native/include/calc-engine/: CalcEngine.hpp
native/src/bindings/node/: addon.cpp  cad3d_addon.cpp
native/src/cad2d/: Engine.cpp  Engine.h  Geometry.h
native/src/cad2d/common/: GeometryTypes.h
native/src/cad2d/entities/: Arc.h  Circle.h  Ellipse.h  Entity.h  Line.h  Point.h  Polyline.h  Rectangle.h  Spline.h
native/src/cad2d/io/: DXFExporter.cpp  DXFExporter.h  JSONSerializer.cpp  JSONSerializer.h
native/src/cad2d/utils/: IntersectionUtils.h
native/src/cad3d/: CAD3DEngine.cpp  CAD3DEngine.h
native/src/calc-engine/: CalcEngine.cpp  CalcEngineBinding.cpp
native/test/: feature_test.js
public/wasm/: cad_engine.js  cad_engine.wasm
python/: requirements.txt  setup.sh
python/src/: thermodynamics.py
src/: ARCHITECTURE.md  App.tsx  app.rs  canvas.rs  i18n.ts  index.css  main.rs  main.tsx
src-electron/: main.cjs  preload.cjs
src-tauri/: tauri.conf.json
src/components/: AlignmentToolbar.tsx  Canvas.tsx  Toolbar.tsx  WidgetContainer.tsx  WidgetErrorBoundary.tsx  WidgetLoading.tsx
src/components/__tests__/: Canvas.test.tsx
src/components/automation/: ConnectionContextMenu.tsx  ConnectorHandle.tsx  WireLayer.tsx  index.ts
src/components/widgets/: CAD2DWidget.tsx  CalculatorWidget.tsx  ImageViewerWidget.tsx  NoteWidget.tsx  PDFViewerWidget.tsx  PresentationWidget.tsx  ProjectMenuWidget.tsx  SettingsWidget.tsx  SpreadsheetWidget.tsx  TodoWidget.tsx
src/components/widgets/CAD2D/: CAD2DCanvas.tsx  CAD2DWidget.tsx  CADEngine.ts  CommandLine.tsx  CommandParser.ts  Grid.tsx  LayersPanel.tsx  PropertiesPanel.tsx  Toolbar.tsx  WasmCanvas.tsx  index.tsx  types.ts
src/components/workspace/: TabBar.css  TabBar.tsx
src/config/: tools.ts
src/core/ai/: AIService.ts  ToolRegistry.ts  index.ts  types.ts
src/core/ai/providers/: EmbeddedProvider.ts  OllamaProvider.ts  SimpleProvider.ts
src/core/ai/rag/: RAGService.ts  index.ts
src/core/canvas/: constants.ts  index.ts
src/core/canvas/hooks/: index.ts  useCanvasGrid.ts  useCanvasKeyboard.ts  useCanvasNavigation.ts  useCanvasPaste.ts  useLassoSelection.ts
src/core/services/automation/: connectionManager.ts  eventBus.ts  index.ts  types.ts
src/core/services/cad-3d-engine/: CAD3DEngine.ts  FeatureSystem.ts  SketchProtocol.ts
src/core/services/cad-engine/: CADEngine.ts
src/core/services/filesystem/: fileSystemAdapter.ts
src/core/services/project/: projectManager.ts  projectService.ts
src/core/widgets/: WidgetRenderer.tsx  constants.ts  index.ts
src/core/widgets/hooks/: index.ts  useContextMenu.ts  useExternalWindow.tsx  useWidgetDrag.ts  useWireDropTarget.ts
src/cpp/: Database.h  Engine.cpp  Engine.h  Geometry.h
src/cpp/wasm/: bindings.cpp
src/features/: container.rs  instance.rs  mod.rs
src/features/ai-assistant/: AIWidget.tsx  index.ts
src/features/ai-assistant/components/: ChatMessageBubble.tsx
src/features/ai_assistant/: mod.rs
src/features/automations/: index.ts
src/features/automations/pdf-export/: PDFExportWidget.tsx  index.ts
src/features/cad-2d/: CAD2DWidget.tsx  COMMANDS.md  CommandParser.ts  index.ts  types.ts
src/features/cad-2d/components/: CADTabsBar.tsx  CommandLine.tsx  WasmCanvas.tsx
src/features/cad-2d/hooks/: types.ts  useCADCommand.ts  useCADDrawing.ts  useCADEditing.ts  useCADPreview.ts  useCADSelection.ts  useCADTabs.ts
src/features/cad-2d/utils/: CanvasRenderer.ts  GeometryHelpers.ts
src/features/cad-3d/: CAD3DWidget.tsx  index.ts
src/features/cad-3d/components/: FeatureTree.tsx  Toolbar3D.tsx  Viewport3D.tsx
src/features/cad-3d/services/: RaycasterService.ts
src/features/cad-editor/: CAD2DWidget.tsx  CommandLine.tsx  CommandParser.ts  WasmCanvas.tsx
src/features/cad_2d/: mod.rs  types.rs  viewport.rs
src/features/cad_3d/: mod.rs  types.rs  viewport.rs
src/features/data-vault/: DataVaultWidget.tsx  index.ts
src/features/data_vault/: mod.rs
src/features/engineering-calculator/: EngineeringCalculator.tsx  index.ts
src/features/engineering-calculator/api/: thermodynamics.ts
src/features/engineering-calculator/components/: EngineeringCharts.tsx  FormulaPanel.tsx  MaterialSelector.tsx  UnitConverter.tsx
src/features/engineering-calculator/data/: constants.ts  materials.ts  units.ts
src/features/engineering-calculator/formulas/: fluids.ts  index.ts  machineElements.ts  shafts.ts  strength.ts  thermal.ts
src/features/engineering-calculator/hooks/: useCalculator.ts
src/features/engineering-calculator/native/: calcEngine.ts
src/features/engineering-calculator/styles/: calculator.css
src/features/engineering-calculator/utils/: exportPdf.ts
src/features/engineering_calculator/: mod.rs
src/features/image-viewer/: index.ts
src/features/note-editor/: NoteWidget.tsx  index.ts
src/features/note-editor/components/: BubbleMenu.tsx  SearchBar.tsx  SlashCommandList.tsx  TemplatePicker.tsx  Toolbar.tsx  ToolbarButton.tsx  ToolbarDivider.tsx
src/features/note-editor/styles/: editor.css
src/features/note_editor/: document.rs  editor.rs  extensions.rs  history.rs  mod.rs
src/features/pdf-viewer/: PDFViewerWidget.tsx  index.ts
src/features/presentation/: index.ts
src/features/project/: ProjectController.tsx  ProjectManager.tsx  index.ts
src/features/project-menu/: ProjectMenuWidget.tsx  index.ts
src/features/settings/: SettingsWidget.tsx  index.ts
src/features/spreadsheet/: SpreadsheetWidget.tsx  index.ts  mod.rs
src/features/startup/: IntroPortal.tsx
src/features/todo/: index.ts
src/layouts/: CadStandaloneLayout.tsx  SingleWidgetLayout.tsx  WorkspaceLayout.tsx
src/locales/: en.json  tr.json
src/panels/: mod.rs  sidebar.rs
src/store/: aiSettingsStore.ts  aiStore.ts  projectStore.ts  store.ts  themeStore.ts  workspaceStore.ts
src/test/: setup.ts
src/types/: dxf.d.ts  electron.d.ts
src/utils/: projectManager.ts
(+38 files in other folders)
